fix(ui): Update layer z-index for tooltip, hovercard and dialog

--- a/packages/ui/src/app/app.module.css
+++ b/packages/ui/src/app/app.module.css
@@ -52,7 +52,7 @@
 
   .header {
     position: fixed;
-    z-index: var(--layer-high);
+    z-index: calc(var(--layer-xhigh) + 2);
     left: 0;
     top: 0;
     right: 0;
@@ -62,6 +62,6 @@
   .tabsContainer {
     position: sticky;
     top: var(--header-height);
-    z-index: calc(var(--layer-high) - 1);
+    z-index: calc(var(--layer-xhigh) + 1);
   }
 }
