--- a/packages/ui/src/components/metrics-treemap/metrics-treemap.module.css
+++ b/packages/ui/src/components/metrics-treemap/metrics-treemap.module.css
@@ -297,7 +297,7 @@
 }
 
 .tooltip {
-  z-index: var(--layer-xxhigh);
+  z-index: var(--layer-high);
   padding: var(--space-xsmall) var(--space-small);
   border-radius: var(--radius-medium);
   width: calc(100vw - 2 * var(--space-small));
