--- a/packages/ui/src/ui/dialog/dialog.module.css
+++ b/packages/ui/src/ui/dialog/dialog.module.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 99999 !important;
+  z-index: var(--layer-xxhigh);
 }
 
 .backdrop::before {
@@ -27,6 +27,7 @@
   padding: var(--dialog-padding);
   background: var(--color-background);
   box-shadow: 0 0 var(--space-medium) var(--color-shadow);
+  z-index: var(--layer-xxhigh);
 }
 
 .header {
